--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,20 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.words {
+  position: relative;
+  animation: move-words 5s linear infinite;
+  margin: 0;
+}
+@keyframes move-words {
+  0% {
+    left: 100%;
+  }
+  100% {
+    left: -100%;
+  }
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
